--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 21:05:11 2018</p>
+         Last Run: Wed Jul 11 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -36,7 +36,7 @@
                         <td>0</td>
                         <td>35</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSE</td>
                         <td>11</td>
                      </tr>
@@ -50,7 +50,7 @@
                         <td>2</td>
                         <td>10</td>
                         <td>S</td>
-                        <td>15</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -61,8 +61,8 @@
                         <td>34</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SE</td>
-                        <td>24</td>
+                        <td>SSE</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,7 +74,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>24</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>13</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -227,10 +227,10 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "11",
-                 "15",
-                 "24",
-                 "24",
-                 "13"
+                 "12",
+                 "21",
+                 "26",
+                 "16"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 21:05:11 2018</p>
+         Last Run: Wed Jul 11 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,58 +271,58 @@
                         <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>31</td>
-                        <td>78</td>
+                        <td>30</td>
+                        <td>75</td>
                         <td>2</td>
-                        <td>16</td>
-                        <td>NW</td>
-                        <td>68</td>
+                        <td>14</td>
+                        <td>NNW</td>
+                        <td>66</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Mostly Cloudy</td>
-                        <td>13</td>
-                        <td>13</td>
-                        <td>16</td>
-                        <td>64</td>
+                        <td>12</td>
+                        <td>12</td>
+                        <td>15</td>
+                        <td>67</td>
                         <td>4</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>73</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>2</td>
-                        <td>51</td>
-                        <td>4</td>
                         <td>14</td>
+                        <td>14</td>
+                        <td>2</td>
+                        <td>57</td>
+                        <td>5</td>
+                        <td>11</td>
                         <td>NNW</td>
-                        <td>75</td>
+                        <td>73</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
                         <td>15</td>
-                        <td>44</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>51</td>
                         <td>4</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>NNW</td>
                         <td>78</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>16</td>
+                        <td>16</td>
                         <td>15</td>
-                        <td>39</td>
+                        <td>46</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>NNW</td>
                         <td>75</td>
                      </tr>
@@ -371,10 +371,10 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "11",
-                 "13",
+                 "12",
+                 "14",
                  "15",
-                 "17",
-                 "19"
+                 "16"
                ]
              },
              {
@@ -384,10 +384,10 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "11",
-                 "13",
+                 "12",
+                 "14",
                  "15",
-                 "17",
-                 "19"
+                 "16"
                ]
              }
            ]
@@ -440,8 +440,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "31",
-                 "16",
+                 "30",
+                 "15",
                  "2",
                  "15",
                  "15"
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "64",
+                 "75",
+                 "67",
+                 "57",
                  "51",
-                 "44",
-                 "39"
+                 "46"
                ]
              },
              {
@@ -464,9 +464,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "68",
+                 "66",
+                 "70",
                  "73",
-                 "75",
                  "78",
                  "75"
                ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 21:05:11 2018</p>
+         Last Run: Wed Jul 11 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>2</td>
                         <td>10</td>
                         <td>SSW</td>
@@ -519,8 +519,8 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
                         <td>48</td>
                         <td>3</td>
@@ -538,7 +538,7 @@
                         <td>4</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>18</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -550,7 +550,7 @@
                         <td>6</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,11 +558,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>7</td>
                         <td>11</td>
                         <td>SSE</td>
-                        <td>17</td>
+                        <td>18</td>
                      </tr>
                   </tbody>
                </table>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -690,11 +690,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
+                 "55",
                  "48",
                  "42",
                  "37",
-                 "34"
+                 "33"
                ]
              },
              {
@@ -704,9 +704,9 @@
                "data":[
                  "4",
                  "9",
-                 "18",
-                 "22",
-                 "17"
+                 "19",
+                 "23",
+                 "18"
                ]
              }
            ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 21:05:11 2018</p>
+         Last Run: Wed Jul 11 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -750,9 +750,9 @@
                         <td>0</td>
                         <td>30</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>ESE</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -764,7 +764,7 @@
                         <td>1</td>
                         <td>18</td>
                         <td>E</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -774,9 +774,9 @@
                         <td>0</td>
                         <td>39</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>10</td>
                      </tr>
                   </tbody>
                </table>
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "7",
-                 "13"
+                 "3",
+                 "6",
+                 "10"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 21:05:11 2018</p>
+         Last Run: Wed Jul 11 22:05:20 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -947,7 +947,7 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>16</td>
+                        <td>15</td>
                         <td>35</td>
                         <td>1</td>
                         <td>18</td>
@@ -960,9 +960,9 @@
                         <td>24</td>
                         <td>24</td>
                         <td>12</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>ESE</td>
                         <td>26</td>
                      </tr>
@@ -971,10 +971,10 @@
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>15</td>
+                        <td>12</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
                         <td>30</td>
                      </tr>
@@ -1084,9 +1084,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "16",
+                 "15",
                  "12",
-                 "15"
+                 "12"
                ]
              },
              {
@@ -1095,7 +1095,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "35",
-                 "40",
+                 "39",
                  "47"
                ]
              },
