--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 23:05:24 2018</p>
+         Last Run: Thu Jul 12 00:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -36,9 +36,9 @@
                         <td>0</td>
                         <td>35</td>
                         <td>4</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSE</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>06:00 PM</td>
@@ -49,7 +49,7 @@
                         <td>34</td>
                         <td>2</td>
                         <td>10</td>
-                        <td>S</td>
+                        <td>SSE</td>
                         <td>12</td>
                      </tr>
                      <tr>
@@ -61,8 +61,8 @@
                         <td>34</td>
                         <td>1</td>
                         <td>11</td>
-                        <td>SSE</td>
-                        <td>21</td>
+                        <td>SE</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -73,8 +73,8 @@
                         <td>38</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SSE</td>
-                        <td>26</td>
+                        <td>SE</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -86,7 +86,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SE</td>
-                        <td>16</td>
+                        <td>19</td>
                      </tr>
                   </tbody>
                </table>
@@ -226,11 +226,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
                  "12",
-                 "21",
-                 "26",
-                 "16"
+                 "12",
+                 "25",
+                 "29",
+                 "19"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 23:05:24 2018</p>
+         Last Run: Thu Jul 12 00:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -268,10 +268,10 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Chance of Rain</td>
+                        <td>Mostly Cloudy</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>30</td>
+                        <td>24</td>
                         <td>75</td>
                         <td>2</td>
                         <td>14</td>
@@ -283,7 +283,7 @@
                         <td>Mostly Cloudy</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>15</td>
+                        <td>16</td>
                         <td>67</td>
                         <td>4</td>
                         <td>13</td>
@@ -296,7 +296,7 @@
                         <td>14</td>
                         <td>14</td>
                         <td>2</td>
-                        <td>57</td>
+                        <td>58</td>
                         <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -304,27 +304,27 @@
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>15</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>51</td>
+                        <td>52</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>78</td>
+                        <td>83</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>16</td>
                         <td>16</td>
                         <td>15</td>
-                        <td>46</td>
-                        <td>6</td>
+                        <td>47</td>
+                        <td>5</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>75</td>
+                        <td>82</td>
                      </tr>
                   </tbody>
                </table>
@@ -440,8 +440,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "30",
-                 "15",
+                 "24",
+                 "16",
                  "2",
                  "15",
                  "15"
@@ -454,9 +454,9 @@
                "data":[
                  "75",
                  "67",
-                 "57",
-                 "51",
-                 "46"
+                 "58",
+                 "52",
+                 "47"
                ]
              },
              {
@@ -467,8 +467,8 @@
                  "66",
                  "70",
                  "73",
-                 "78",
-                 "75"
+                 "83",
+                 "82"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 23:05:24 2018</p>
+         Last Run: Thu Jul 12 00:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -514,19 +514,19 @@
                         <td>2</td>
                         <td>10</td>
                         <td>SSW</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
+                        <td>17</td>
+                        <td>17</td>
                         <td>0</td>
                         <td>48</td>
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>9</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -538,7 +538,7 @@
                         <td>4</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -560,7 +560,7 @@
                         <td>0</td>
                         <td>34</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>SSE</td>
                         <td>17</td>
                      </tr>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "18",
+                 "17",
                  "19",
                  "21",
                  "22"
@@ -702,9 +702,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "9",
-                 "18",
+                 "3",
+                 "8",
+                 "17",
                  "22",
                  "17"
                ]
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 23:05:24 2018</p>
+         Last Run: Thu Jul 12 00:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -748,11 +748,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>2</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>4</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -760,11 +760,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>35</td>
                         <td>1</td>
                         <td>18</td>
                         <td>E</td>
-                        <td>7</td>
+                        <td>6</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -772,11 +772,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>40</td>
                         <td>0</td>
                         <td>16</td>
                         <td>ESE</td>
-                        <td>13</td>
+                        <td>12</td>
                      </tr>
                   </tbody>
                </table>
@@ -894,9 +894,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
-                 "33",
-                 "39"
+                 "31",
+                 "35",
+                 "40"
                ]
              },
              {
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "4",
-                 "7",
-                 "13"
+                 "3",
+                 "6",
+                 "12"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 23:05:24 2018</p>
+         Last Run: Thu Jul 12 00:05:18 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -947,7 +947,7 @@
                         <td>Clear</td>
                         <td>25</td>
                         <td>25</td>
-                        <td>17</td>
+                        <td>15</td>
                         <td>35</td>
                         <td>1</td>
                         <td>18</td>
@@ -959,22 +959,22 @@
                         <td>Clear</td>
                         <td>24</td>
                         <td>24</td>
-                        <td>13</td>
-                        <td>40</td>
+                        <td>12</td>
+                        <td>39</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>ESE</td>
-                        <td>25</td>
+                        <td>26</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>18</td>
+                        <td>12</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>16</td>
                         <td>ESE</td>
                         <td>30</td>
                      </tr>
@@ -1084,9 +1084,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "17",
-                 "13",
-                 "18"
+                 "15",
+                 "12",
+                 "12"
                ]
              },
              {
@@ -1095,7 +1095,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "35",
-                 "40",
+                 "39",
                  "47"
                ]
              },
@@ -1105,7 +1105,7 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "15",
-                 "25",
+                 "26",
                  "30"
                ]
              }
